Made the DTF fade out at edges when content is truncated, and fixed display behaviour, especially when moving the caret up and down (soft-wrapped) lines.

--- a/records/app/src/main/scss/general.scss
+++ b/records/app/src/main/scss/general.scss
@@ -196,6 +196,11 @@
     -fx-fill: darkred !important;
 }
 
-.document-text-field > .document-caret {
-    -fx-stroke: red;
+.document-text-field {
+    & > .document-caret {
+        -fx-stroke: red;
+    }
+    & > .fade-overlay {
+        -fx-fill: transparent;
+    }
 }
